forgot to add files today, adding all the new files, with edited codes, with some css as well

--- a/project2/views/partials/_headers.ejs
+++ b/project2/views/partials/_headers.ejs
@@ -1,3 +1,11 @@
-<header>
-  HELLO WORLD
+<style>
+#header{
+  opacity: 0.4;
+  font-size: 80px;
+  font-family: "Arial Black";
+  }
+</style>
+
+<header id = "header" >
+ <b> Tiny App </b>
 </header>
