--- a/project2/views/urls_new.ejs
+++ b/project2/views/urls_new.ejs
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head></head>
-  <body style="font-size:20px; padding:50px;">
-    <% include partials/_header %>
+  <head>
+   <style>
+  #main {
+  background-image: url("http://wallzoa.com/wp-content/uploads/2013/05/pastel-rainbow-backgrounds.jpg");
+  background-size:100% 100vh;
+  text-align: center;
+  font-family: "Arial Black";
+}
+  </style>
+  <% include ./partials/_headers %>
+  </head>
+  <body id = "main">
     <form action="/urls/new" method="POST" style="margin:150px;">
       <label for="longURL">Enter a URL:</label>
       <input id="longURL" type="text" name="longURL" placeholder="http://" style="width: 300px">
       <input type="submit" value="Submit">
     </form>
+
   </body>
 </html>
